# neuroadapter_repro_ser

./: .gitignore  AGENTS.md  DIAGNOSIS.md  EXPERIMENT_LOG.md  README.md  REPORT.md  RESEARCH_SUMMARY.md  pyproject.toml
configs/: paths.example.env  paths.example.yaml
diagnostics/: data_alignment_100000_first10.json  data_alignment_20000_first10.json  data_alignment_50000_first10.json  decode_brain_encoder_summary.json  decode_brain_encoder_summary_seed12345.json  decode_brain_encoder_summary_seed12345_steps21000.json  decode_lightweight_image_metrics.json  official_metric_summary.json  official_metric_summary_seed12345.json  official_metric_summary_seed12345_with21000.json
docs/: CURRENT_STATE.md  DECISIONS.md  EXPERIMENT_PROTOCOL.md  RESEARCH_PLAN.md  RESULTS_TEMPLATE.md
notes/: status.md
scripts/: audit_parcel_provenance.py  build_full_parcel_inventory.py  build_stimulus_manifest.py  check_data_alignment.py  decode_brain_encoder_select.py  decode_limited.py  decode_roi_ablation.py  decode_roi_ablation_batch.py  download_nsd_subj01.sh  evaluate_decode_outputs.py  evaluate_roi_ablation.py  generate_schaefer_labels.py  make_roi_condition_spec.py  make_roi_mean_spec.py  make_roi_random_controls.py  prepare_metric_inputs.py  prepare_nsd_subj01.py  prepare_roi_mapping.py  prepare_roi_metric_inputs.py  prepare_stimulus_dependencies.sh  resample_official_nsd_roi_to_fsaverage.py  run_official_roi_metrics.sh  run_optimizer_resume_ablation.sh  run_random_controls_after_mean.sh  smoke_model.sh  smoke_test_checkpoint_intervention.py  smoke_train_step.py  train_limited.py  (+5 more)
(+50 files in other folders)
