[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-roi-causal"
version = "0.1.0"
description = "Functional ROI causal analysis for NeuroAdapter"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "PyYAML",
  "matplotlib",
  "Pillow",
  "torch",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

